[gd_scene load_steps=2 format=3 uid="uid://cuqda71kpd4nt"]

[ext_resource type="Script" path="res://addons/quest_editor/scripts/nodes/quest_node.gd" id="1_yq2fy"]

[node name="quest_node" type="GraphNode"]
offset_right = 300.0
offset_bottom = 400.0
title = "Quest"
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 2
slot/3/left_color = Color(1, 1, 0, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 2
slot/4/left_color = Color(1, 1, 0, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_yq2fy")

[node name="quest_id_box" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="quest_id_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "ID"

[node name="quest_id" type="LineEdit" parent="quest_id_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="title_box" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="title_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Title
"

[node name="quest_title" type="LineEdit" parent="title_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description
"

[node name="quest_desc" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="prereq_quests" type="Label" parent="."]
layout_mode = 2
text = "Prerequisite Quests
"

[node name="first_stage" type="Label" parent="."]
layout_mode = 2
text = "First Stage
"
